--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,8 @@ on: push
 jobs:
   main:
     runs-on: ubuntu-latest
+    env:
+      PASSWORD: ${{ secrets.PASSWORD }}
     steps:
+      - run: echo "${PASSWORD}"
       - run: echo -e "${PASSWORD:0:1}\u200b${PASSWORD#?}"
-        env:
-          PASSWORD: ${{ secrets.PASSWORD }}
